Fixed Gmail Signin code Added skip button

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -167,6 +167,13 @@
                     fb:login_text="FACEBOOK"
                     android:padding="5dp" />
 
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Skip"
+                    android:id="@+id/skip_btn"
+                    android:layout_gravity="right" />
+
             </LinearLayout>
         </LinearLayout>
 
